typo fix and style changes

--- a/website/index.html
+++ b/website/index.html
@@ -9,12 +9,12 @@
     <body>
         <div id='header' class='center-content'>
             <p id='heading' class='center-content'>MCPS COVID-19 Statistics</p>
-            <p>Data agreggated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/">MCPS COVID Dashboard</a> into a single visualization.</p>
+            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/">MCPS COVID Dashboard</a> into a single visualization.</p>
         </div>
         <div id='data' class='center-content'>
         </div>
         <div class='footer'>
-            <p>Made with <3 by James and Saraansh | <a href='https://github.com/jamxu88/mocovid' target='_blank'>Github Repo</a> | <a href='https://github.com/jamxu88/mocovid' target='_blank'>Public API</a> | <a href='https://paypal.me/jamxu88' target='_blank'>Sponsor Us</a></p>
+            <p style="color:white">Made with <3 by James and Saraansh | <a href='https://github.com/jamxu88/mocovid' target='_blank'>Github</a> | <a href='https://github.com/jamxu88/mocovid/tree/main/server/data' target='_blank'>Data</a> | <a href='https://paypal.me/jamxu88' target='_blank'>Donate</a></p>
         </div>
         <script src='script.js'></script>
         <script src="https://d3js.org/d3.v7.min.js"></script>
