--- a/website/index.html
+++ b/website/index.html
@@ -9,14 +9,15 @@
     <body>
         <div id='header' class='center-content'>
             <p id='heading' class='center-content'>MCPS COVID-19 Statistics</p>
-            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/">MCPS COVID Dashboard</a> into a single visualization.</p>
+            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a single visualization. Last updated 01/11/2022</p>
         </div>
         <div id='data' class='center-content'>
         </div>
         <div class='footer'>
             <p style="color:white">Made with <3 by James and Saraansh | <a href='https://github.com/jamxu88/mocovid' target='_blank'>Github</a> | <a href='https://github.com/jamxu88/mocovid/tree/main/server/data' target='_blank'>Data</a> | <a href='https://paypal.me/jamxu88' target='_blank'>Donate</a></p>
         </div>
-        <script src='script.js'></script>
+        <script src='./scripts/script.js'></script>
+        <script src='./scripts/table.js' type="module"></script>
         <script src="https://d3js.org/d3.v7.min.js"></script>
     </body>
 </html>
