--- a/website/index.html
+++ b/website/index.html
@@ -16,8 +16,8 @@
         <div class='footer'>
             <p style="color:white">Made with <3 by James and Saraansh | <a href='https://github.com/jamxu88/mocovid' target='_blank'>Github</a> | <a href='https://github.com/jamxu88/mocovid/tree/main/server/data' target='_blank'>Data</a> | <a href='https://paypal.me/jamxu88' target='_blank'>Donate</a></p>
         </div>
-        <script src='./scripts/script.js'></script>
-        <script src='./scripts/table.js' type="module"></script>
         <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src='./scripts/script.js'></script>
+        <script src='./scripts/table.js'></script>
     </body>
 </html>
