added filter button and words

--- a/website/index.html
+++ b/website/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <div id='header' class='center-content'>
-            <p id='heading' class='center-content'>MCPS COVID-19 Statistics</p>
-            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a single visualization. Last updated 01/11/2022</p>
+            <p id='heading' class='center-content'>[DEMO] MCPS COVID-19 Statistics</p>
+            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a single visualization. Last updated 01/11/2022. This is a work in progress demo.</p>
         </div>
         <div class="center-content">
-            <input placeholder="Filter Schools" id='search' class='center-content'>
+            <input placeholder="Filter Schools" id='search' class='center-content'><button onclick="filter()">Filter</button>
         </div>
         
         <div id='data' class='center-content'>
