--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id='header' class='center-content'>
             <p id='heading' class='center-content'>[DEMO] MCPS COVID-19 Statistics</p>
-            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a set of visualizations. Last updated 01/11/2022. This is a work in progress demo with a lot more data and other visualizations coming soon.</p>
+            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a set of visualizations. Data last updated for 01/12/2022. This is a work in progress demo with a lot more data and other visualizations coming soon.</p>
         </div>
 
         <div id='chart' class='center-content'>
