added heatmap & updated some things

--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,9 @@
         <div class="center-content">
             <input placeholder="Filter Schools" id='search' class='center-content'><button onclick="filter()">Filter</button>
         </div>
-        
+        <div id='heatmap' class='center-content'>
+
+        </div>
         <div id='data' class='center-content'>
             
         </div>
@@ -33,6 +35,7 @@
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
         <script src='./scripts/stackedchart.js'></script>
         <script src='./scripts/piechart.js'></script>
+        <script src='./scripts/heatmap.js'></script>
         <script src='./scripts/table.js'></script>
         <script src='./scripts/script.js'></script>
     </body>
