--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <meta name="description" content="Aggregated COVID-19 Data for Montgomery County Public Schools with Visualizations">
     </head>
     <body>
         <div id='header' class='center-content'>
