added date info json for specific schools

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
             <p id='heading' class='center-content'>[DEMO] MCPS COVID-19 Statistics</p>
             <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a set of visualizations. Data last updated for 01/13/2022. This is a work in progress demo with a lot more data and other visualizations coming soon.</p>
         </div>
-
+        <div id='linechart' class='center-content'></div>
         <div class="center-content">
             <input placeholder="Search School" id='search' class='center-content' list='schools'>
             <datalist id='schools'>
@@ -27,7 +27,6 @@
 
         <br>
         <br>
-        
         
         <div id='heatmap' class='center-content'>
             <div id='loading'>
@@ -45,6 +44,7 @@
         <script src='./scripts/stackedchart.js'></script>
         <script src='./scripts/piechart.js'></script>
         <script src='./scripts/heatmap.js'></script>
+        <script src='./scripts/linechart.js'></script>
         <script src='./scripts/table.js'></script>
         <script src='./scripts/script.js'></script>
     </body>
