--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id='header' class='center-content'>
             <p id='heading' class='center-content'>[DEMO] MCPS COVID-19 Statistics</p>
-            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a set of visualizations. Data last updated for 01/14/2022. This is a work in progress demo with a lot more data and other visualizations coming soon.</p>
+            <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a set of visualizations. Data last updated for 01/14/2022 <b>Data has not yet been released for 1/15.</b>. This is a work in progress demo with a lot more data and other visualizations coming soon.</p>
             <p><b>Why is this data different from the official COVID Dashboard graph?</b> The graph on the official dashboard is not accurate and not up to date. We use the released data found in the PDFs released around 7pm each day to calculate our numbers. There will be some error but it is generally accurate.</p>
         </div>
         <div class="center-content">
@@ -37,6 +37,9 @@
         </div>
         <div id='data' class='center-content'>
             
+        </div>
+        <div>
+            <p>This website was not created nor endorsed by Montgomery County Public Schools. This data should not be viewed as 100% accurate.</p>
         </div>
 
         <div class='footer'>
