--- a/website/index.html
+++ b/website/index.html
@@ -26,11 +26,11 @@
                 Loading Data...
             </div>
             <div id='numbers' class='center-content'>
-                <p>Active Student Cases: <b id='studentCount' class='right-justify'>0</b><br>Active Staff Cases: <b id='staffCount' class='right-justify'>0</b><br>Total Active Cases: <b id='totalCount' class='right-justify'>0</b><br>Danger score: <b id='prediction'></b></p>
+                <p>Active Student Cases: <b id='studentCount' class='right-justify'>0</b><br>Active Staff Cases: <b id='staffCount' class='right-justify'>0</b><br>Total Active Cases: <b id='totalCount' class='right-justify'>0</b><br>COVID Impact Level: <b id='prediction'></b></p>
             </div>
             <div class='center-content information'>
                 <p>
-                    <b>What is a danger score?</b> A danger score is a simple number derived from COVID stats that gauge a general understanding of the COVID situation. A higher score will generally mean a higher risk, with scores above 350 having a higher chance of going virtual. Obviously, this method is not perfect, but it can be used to gain a better overall view.
+                    <b>What is the COVID Impact Level?</b> The impact level is a simple number derived from COVID stats that gauge a general understanding of the COVID situation. A higher score will generally mean a higher risk of COVID, with scores above 350 having a higher chance of going virtual. Obviously, this method is not perfect, but it can be used to gain a better overall view.
                 </p>
                 <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a set of visualizations. Data last updated for 01/17/2022. <b>*** Data has not yet been released for 1/18. ***</b> This is a work in progress demo with a lot more data and other visualizations coming soon.</p>
                 <p><b>Why is this data different from the official COVID Dashboard graph?</b> The graph on the official dashboard is not accurate and not up to date. We use the released data found in the PDFs released around 7pm each day to calculate our numbers. There will be some error but it is generally accurate.</p>
