favicon and adjusted impact level

--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,7 @@
         <title>MCPS COVID-19 Statistics</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <meta name="description" content="Aggregated COVID-19 Data for Montgomery County Public Schools with Visualizations">
