--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,10 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <meta name="description" content="Aggregated COVID-19 Data for Montgomery County Public Schools with Visualizations">
+        <meta name="description" content="MCPS COVID-19 Dashboard- Aggregated COVID-19 Data for Montgomery County Public Schools with Visualizations">
+        <meta name='keyword' content="mcps covid, mcps covid dashboard, montgomery county public schools, mcps covid-19 data">
+        <meta name="author" content="James Xu, Saraansh Wadkar">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class='titlebar'>
