--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>MCPS COVID-19 Statistics</title>
+        <title>MCPS COVID-19 Dashboard/title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
