--- a/website/index.html
+++ b/website/index.html
@@ -37,7 +37,7 @@
                     <b>What is the COVID Impact Level?</b> The impact level is a simple number derived from COVID stats that gauge a general understanding of the COVID situation. A higher score will generally mean a higher risk of COVID, with scores above 350 having a higher chance of going virtual. Obviously, this method is not perfect, but it can be used to gain a better overall view.
                 </p>
                 <p>Data aggregated from the reports found at the <a href="https://www.montgomeryschoolsmd.org/coronavirus/dashboard/" target='_blank'>MCPS COVID Dashboard</a> into a set of visualizations. This is a work in progress demo with a lot more data and other visualizations coming soon.</p>
-                <p><b>Why is this data different from the official COVID Dashboard graph?</b> The graph on the official dashboard is not accurate and not up to date. We use the released data found in the PDFs released around 7pm each day to calculate our numbers. There will be some error but it is generally accurate.</p>
+                <p><b>Why is this data different from the official COVID Dashboard graph?</b> The graph on the official dashboard is not accurate and not up to date. We use the released data found in the PDFs released around 7pm each day to calculate our numbers. There will be some error but it is generally accurate. Data is currently missing on the MCPS website for 02/04/22.</p>
             </div>
             <button style="width: 50%;margin-left: 25%;" class="center-content" onclick="renderHeatmap()" id='heatmapToggle'>View Heatmap</button>
             <div id='chart' class='center-content'></div>
